--- a/OnlineShop/Pages/Index.cshtml
+++ b/OnlineShop/Pages/Index.cshtml
@@ -167,7 +167,7 @@
                                     </div>
                                     <div class="product-body">
                                         <p class="product-category">@product.Category</p>
-                                        <h3 class="product-name"><a href="#">@product.Name</a></h3>
+                                        <h3 class="product-name">@product.Name</h3>
                                         <h4 class="product-price">@product.Price.ToString("C") <del class="product-old-price">@product.OldPrice.ToString("C")</del></h4>
                                     </div>
                                 </div>
@@ -189,7 +189,7 @@
                                     </div>
                                     <div class="product-body">
                                         <p class="product-category">@product.Category</p>
-                                        <h3 class="product-name"><a href="#">@product.Name</a></h3>
+                                        <h3 class="product-name">@product.Name</h3>
                                         <h4 class="product-price">@product.Price.ToString("C") <del class="product-old-price">@product.OldPrice.ToString("C")</del></h4>
                                     </div>
                                 </div>
@@ -222,7 +222,7 @@
                                     </div>
                                     <div class="product-body">
                                         <p class="product-category">@product.Category</p>
-                                        <h3 class="product-name"><a href="#">@product.Name</a></h3>
+                                        <h3 class="product-name">@product.Name</h3>
                                         <h4 class="product-price">@product.Price.ToString("C") <del class="product-old-price">@product.OldPrice.ToString("C")</del></h4>
                                     </div>
                                 </div>
@@ -244,7 +244,7 @@
                                     </div>
                                     <div class="product-body">
                                         <p class="product-category">@product.Category</p>
-                                        <h3 class="product-name"><a href="#">@product.Name</a></h3>
+                                        <h3 class="product-name">@product.Name</h3>
                                         <h4 class="product-price">@product.Price.ToString("C") <del class="product-old-price">@product.OldPrice.ToString("C")</del></h4>
                                     </div>
                                 </div>
@@ -301,7 +301,7 @@
                                     </div>
                                     <div class="product-body">
                                         <p class="product-category">@product.Category</p>
-                                        <h3 class="product-name"><a href="#">@product.Name</a></h3>
+                                        <h3 class="product-name">@product.Name</h3>
                                         <h4 class="product-price">@product.Price.ToString("C") <del class="product-old-price">@product.OldPrice.ToString("C")</del></h4>
                                     </div>
                                 </div>
