--- a/OnlineShop/Pages/Index.cshtml
+++ b/OnlineShop/Pages/Index.cshtml
@@ -86,8 +86,8 @@
                     <div class="section-nav">
                         <ul class="section-tab-nav tab-nav">
                             <li class="active"><a data-toggle="tab" href="#tab2">Laptops</a></li>
-                            <li><a data-toggle="tab" href="#tab2">Smartphones</a></li>
-                            <li><a data-toggle="tab" href="#tab2">Cameras</a></li>
+                            <li><a>Smartphones</a></li>
+                            <li><a data-toggle="tab" href="#tab3">Cameras</a></li>
                             <li><a data-toggle="tab" href="#tab2">Accessories</a></li>
                         </ul>
                     </div>
@@ -99,7 +99,15 @@
                 <div class="row">
                     <div class="products-tabs">
                         <!-- tab -->
-                        <div id="tab2" class="tab-pane fade in active">
+                        @{ 
+                            foreach (var category in Model.Categories)
+                            {
+                                @await Component.InvokeAsync("CategoryTab", category.CategoryId);
+                            }
+                        }
+                      @*  <div id="tab3" class="tab-pane fade in active"></div>*@
+
+                        <div id="tab9" class="tab-pane fade in active">
                             <div class="products-slick" data-nav="#slick-nav-2">
                                 @{
                                     foreach (var product in Model.Products.Where(p => !p.IsNew))
