--- a/OnlineShop/Pages/Shared/_Layout.cshtml
+++ b/OnlineShop/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -46,10 +47,6 @@
                     <li><a href="#"><i class="fa fa-envelope-o"></i> email@email.com</a></li>
                     <li><a href="#"><i class="fa fa-map-marker"></i> 1734 Stonecoal Road</a></li>
                 </ul>
-                <ul class="header-links pull-right">
-                    <li><a asp-page="/Account/Admin" ><i class="fa fa-user-secret"></i> Admin</a></li>
-                    <li><a asp-page="/Account/Login"><i class="fa fa-user-o"></i> My Account</a></li>
-                </ul>
             </div>
         </div>
         <!-- /TOP HEADER -->
@@ -73,11 +70,7 @@
                     <div class="col-md-6">
                         <div class="header-search">
                             <form>
-                                <select class="input-select">
-                                    <option value="0">All Categories</option>
-                                    <option value="1">Category 01</option>
-                                    <option value="1">Category 02</option>
-                                </select>
+                                @await Component.InvokeAsync("CategoryList")
                                 <input class="input" placeholder="Search here">
                                 <button class="search-btn">Search</button>
                             </form>
@@ -87,15 +80,7 @@
                     <!-- ACCOUNT -->
                     <div class="col-md-3 clearfix">
                         <div class="header-ctn">
-                            <!-- Wishlist -->
-                            <div>
-                                <a href="#">
-                                    <i class="fa fa-heart-o"></i>
-                                    <span>Your Wishlist</span>
-                                    <div class="qty">2</div>
-                                </a>
-                            </div>
-                            <!-- /Wishlist -->
+
                             <!-- Cart -->
                             <div class="dropdown">
                                 <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
@@ -138,6 +123,8 @@
                                 </div>
                             </div>
                             <!-- /Cart -->
+                            <div><a asp-page="/Account/Login"><i class="fa fa-user-o"></i> My Account</a></div>
+
                             <!-- Menu Toogle -->
                             <div class="menu-toggle">
                                 <a href="#">
