Added Model for Cart and Page for Cart

--- a/OnlineShop/Pages/Products/Edit.cshtml
+++ b/OnlineShop/Pages/Products/Edit.cshtml
@@ -39,7 +39,7 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="primary-btn" />
-                <a asp-page="../Account/Admin" class="primary-btn"><i class="fa fa-arrow-left"></i></a>
+                <a asp-page="/Account/Admin" class="primary-btn"><i class="fa fa-arrow-left"></i></a>
             </div>
         </form>
     </div>
