--- a/OnlineShop/Pages/Shared/_Layout.cshtml
+++ b/OnlineShop/Pages/Shared/_Layout.cshtml
@@ -92,7 +92,7 @@
                                     <div class="cart-list">
                                         <div class="product-widget">
                                             <div class="product-img">
-                                                <img src="./img/product01.png" alt="">
+                                                <img src="~/img/product01.png" alt="">
                                             </div>
                                             <div class="product-body">
                                                 <h3 class="product-name"><a href="#">product name goes here</a></h3>
@@ -103,7 +103,7 @@
 
                                         <div class="product-widget">
                                             <div class="product-img">
-                                                <img src="./img/product02.png" alt="">
+                                                <img src="~/img/product02.png" alt="">
                                             </div>
                                             <div class="product-body">
                                                 <h3 class="product-name"><a href="#">product name goes here</a></h3>
@@ -117,7 +117,7 @@
                                         <h5>SUBTOTAL: $2940.00</h5>
                                     </div>
                                     <div class="cart-btns">
-                                        <a href="#">View Cart</a>
+                                        <a asp-page="/Products/Cart">View Cart</a>
                                         <a asp-page="/Products/Checkout">Checkout<i class="fa fa-arrow-circle-right"></i></a>
                                     </div>
                                 </div>
