--- a/OnlineShop/Pages/Index.cshtml
+++ b/OnlineShop/Pages/Index.cshtml
@@ -26,37 +26,10 @@
                         <!-- tab -->
                         <div id="tab1" class="tab-pane active">
                             <div class="products-slick" data-nav="#slick-nav-1">
-                                @{ foreach (var product in Model.Products.Where(p => p.IsNew))
-                                    {
-                                      
-                                        <div class="product">
-                                            <a asp-page="./Products/Details" asp-route-id="@product.ProductId">
-                                            <div class="product-img">
-                                                <img src="./img/@product.Images.First().Name" alt="@product.Images.First().Alt">
-                                                <div class="product-label">
-                                                    <span class="new">NEW</span>
-                                                </div>
-                                            </div>
-                                            <div class="product-body">
-                                                <p class="product-category">@product.Category</p>
-                                                <h3 class="product-name">@product.Name</h3>
-                                                <h4 class="product-price"> @product.Price.ToString("C") </h4>
-                                                @*<div class="product-rating">
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                    <i class="fa fa-star"></i>
-                                                </div>*@
-                                            </div>
-                                            </a>
-                                            <div class="add-to-cart">
-                                                <button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
-                                            </div>
-                                        </div>
-                                        <!-- /product -->
-                                    } }
-
+                                @foreach (var product in Model.Products.Where(p => p.IsNew))
+                                {
+                                    await Html.RenderPartialAsync("_Product", product);
+                                }
                             </div>
                             <div id="slick-nav-1" class="products-slick-nav"></div>
                         </div>
@@ -84,12 +57,12 @@
                 <div class="section-title">
                     <h3 class="title">Top selling</h3>
                     <div class="section-nav">
+                        <form>
+
                         <ul class="section-tab-nav tab-nav">
-                            <li class="active"><a data-toggle="tab" href="#tab2">Laptops</a></li>
-                            <li><a>Smartphones</a></li>
-                            <li><a data-toggle="tab" href="#tab3">Cameras</a></li>
-                            <li><a data-toggle="tab" href="#tab2">Accessories</a></li>
+                           <li class="active"><a href="#categories">Smartphones</a></li>
                         </ul>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -98,42 +71,9 @@
             <div class="col-md-12">
                 <div class="row">
                     <div class="products-tabs">
-                        <!-- tab -->
-                        @{ 
-                            foreach (var category in Model.Categories)
-                            {
-                                @await Component.InvokeAsync("CategoryTab", category.CategoryId);
-                            }
-                        }
-                      @*  <div id="tab3" class="tab-pane fade in active"></div>*@
-
                         <div id="tab9" class="tab-pane fade in active">
-                            <div class="products-slick" data-nav="#slick-nav-2">
-                                @{
-                                    foreach (var product in Model.Products.Where(p => !p.IsNew))
-                                    {
-                                        <!-- product -->
-                                        <div class="product">
-                                            <a asp-page="./Products/Details" asp-route-id="@product.ProductId">
-                                                <div class="product-img">
-                                                    <img src="./img/@product.Images.First().Name" alt="@product.Images.First().Alt">
-                                                    <div class="product-label">
-                                                        <span class="sale">-@product.Discount%</span>
-                                                    </div>
-                                                </div>
-                                                <div class="product-body">
-                                                    <p class="product-category">@product.Category</p>
-                                                    <h3 class="product-name">@product.Name</h3>
-                                                    <h4 class="product-price">@product.Price.ToString("C") <del class="product-old-price">@product.OldPrice.ToString("C")</del></h4>
-                                                </div>
-                                            </a>
-                                            <div class="add-to-cart">
-                                                <button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
-                                            </div>
-                                        </div>
-                                        <!-- /product -->
-                                    }
-                                }
+                            <div id="category-list" class="products-slick" data-nav="#slick-nav-2">
+                                @*products go here*@
                             </div>
                             <div id="slick-nav-2" class="products-slick-nav"></div>
                         </div>
@@ -147,184 +87,3 @@
     </div>
     <!-- /container -->
 </div>
-<!-- /SECTION -->
-<!-- SECTION -->
-<div class="section">
-    <!-- container -->
-    <div class="container">
-        <!-- row -->
-        <div class="row">
-            <div class="col-md-4 col-xs-6">
-                <div class="section-title">
-                    <h4 class="title">Top selling</h4>
-                    <div class="section-nav">
-                        <div id="slick-nav-3" class="products-slick-nav"></div>
-                    </div>
-                </div>
-
-                <div class="products-widget-slick" data-nav="#slick-nav-3">
-                    <div>
-                        @{
-                            foreach (var product in Model.Products.Where(p => !p.IsNew))
-                            {
-                                <!-- product widget -->
-                                <a asp-page="./Products/Details" asp-route-id="@product.ProductId">
-                                <div class="product-widget">
-                                    <div class="product-img">
-                                        <img src="./img/@product.Images.First().Name" alt="/@product.Images.First().Alt">
-                                    </div>
-                                    <div class="product-body">
-                                        <p class="product-category">@product.Category</p>
-                                        <h3 class="product-name">@product.Name</h3>
-                                        <h4 class="product-price">@product.Price.ToString("C") <del class="product-old-price">@product.OldPrice.ToString("C")</del></h4>
-                                    </div>
-                                </div>
-                                </a>
-                                <!-- product widget -->
-                            }
-                        }
-                    </div>
-
-                    <div>
-                        @{
-                            foreach (var product in Model.Products.Where(p => !p.IsNew))
-                            {
-                                <!-- product widget -->
-                                <a asp-page="./Products/Details" asp-route-id="@product.ProductId">
-                                <div class="product-widget">
-                                    <div class="product-img">
-                                        <img src="./img/@product.Images.First().Name" alt="/@product.Images.First().Alt">
-                                    </div>
-                                    <div class="product-body">
-                                        <p class="product-category">@product.Category</p>
-                                        <h3 class="product-name">@product.Name</h3>
-                                        <h4 class="product-price">@product.Price.ToString("C") <del class="product-old-price">@product.OldPrice.ToString("C")</del></h4>
-                                    </div>
-                                </div>
-                                </a>
-                                <!-- product widget -->
-                            }
-                        }
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4 col-xs-6">
-                <div class="section-title">
-                    <h4 class="title">Top selling</h4>
-                    <div class="section-nav">
-                        <div id="slick-nav-4" class="products-slick-nav"></div>
-                    </div>
-                </div>
-
-                <div class="products-widget-slick" data-nav="#slick-nav-4">
-                    <div>
-                        @{
-                            foreach (var product in Model.Products.Where(p => !p.IsNew))
-                            {
-                                <!-- product widget -->
-                                <a asp-page="./Products/Details" asp-route-id="@product.ProductId">
-                                <div class="product-widget">
-                                    <div class="product-img">
-                                        <img src="./img/@product.Images.First().Name" alt="/@product.Images.First().Alt">
-                                    </div>
-                                    <div class="product-body">
-                                        <p class="product-category">@product.Category</p>
-                                        <h3 class="product-name">@product.Name</h3>
-                                        <h4 class="product-price">@product.Price.ToString("C") <del class="product-old-price">@product.OldPrice.ToString("C")</del></h4>
-                                    </div>
-                                </div>
-                                </a>
-                                <!-- product widget -->
-                            }
-                        }
-                    </div>
-
-                    <div>
-                        @{
-                            foreach (var product in Model.Products.Where(p => !p.IsNew))
-                            {
-                                <!-- product widget -->
-                                <a asp-page="./Products/Details" asp-route-id="@product.ProductId">
-                                <div class="product-widget">
-                                    <div class="product-img">
-                                        <img src="./img/@product.Images.First().Name" alt="/@product.Images.First().Alt">
-                                    </div>
-                                    <div class="product-body">
-                                        <p class="product-category">@product.Category</p>
-                                        <h3 class="product-name">@product.Name</h3>
-                                        <h4 class="product-price">@product.Price.ToString("C") <del class="product-old-price">@product.OldPrice.ToString("C")</del></h4>
-                                    </div>
-                                </div>
-                                </a>
-                                <!-- product widget -->
-                            }
-                        }
-                    </div>
-                </div>
-            </div>
-
-            <div class="clearfix visible-sm visible-xs"></div>
-
-            <div class="col-md-4 col-xs-6">
-                <div class="section-title">
-                    <h4 class="title">Top selling</h4>
-                    <div class="section-nav">
-                        <div id="slick-nav-5" class="products-slick-nav"></div>
-                    </div>
-                </div>
-
-                <div class="products-widget-slick" data-nav="#slick-nav-5">
-                    <div>
-                        @{
-                            foreach (var product in Model.Products.Where(p => !p.IsNew))
-                            {
-                                <!-- product widget -->
-                                <a asp-page="./Products/Details" asp-route-id="@product.ProductId">
-                                <div class="product-widget">
-                                    <div class="product-img">
-                                        <img src="./img/@product.Images.First().Name" alt="/@product.Images.First().Alt">
-                                    </div>
-                                    <div class="product-body">
-                                        <p class="product-category">@product.Category</p>
-                                        <h3 class="product-name">@product.Name</h3>
-                                        <h4 class="product-price">@product.Price.ToString("C") <del class="product-old-price">@product.OldPrice.ToString("C")</del></h4>
-                                    </div>
-                                </div>
-                                </a>
-                                <!-- product widget -->
-                            }
-                        }
-                    </div>
-
-                    <div>
-                        @{
-                            foreach (var product in Model.Products.Where(p => !p.IsNew))
-                            {
-                                <!-- product widget -->
-                                <a asp-page="./Products/Details" asp-route-id="@product.ProductId">
-                                <div class="product-widget">
-                                    <div class="product-img">
-                                        <img src="./img/@product.Images.First().Name" alt="/@product.Images.First().Alt">
-                                    </div>
-                                    <div class="product-body">
-                                        <p class="product-category">@product.Category</p>
-                                        <h3 class="product-name">@product.Name</h3>
-                                        <h4 class="product-price">@product.Price.ToString("C") <del class="product-old-price">@product.OldPrice.ToString("C")</del></h4>
-                                    </div>
-                                </div>
-                                </a>
-                                <!-- product widget -->
-                            }
-                        }
-                    </div>
-                </div>
-            </div>
-
-        </div>
-        <!-- /row -->
-    </div>
-    <!-- /container -->
-</div>
-<!-- /SECTION -->
-
